# minhook-detours-sys

./: Cargo.toml  LICENSE  README.md  build.rs
minhook-detours/: MinHook.def  resource.h
minhook-detours/SlimDetours/: SlimDetours.NDK.inl  SlimDetours.h
src/: lib.rs
tests/: integration.rs
