[package]
name = "minhook-detours-sys"
version = "0.1.2"
authors = ["Gabriela Cristei <cristei.g772@gmail.com", "Ivan Molodetskikh <yalterz@gmail.com>"]
description = "Raw bindings to MinHook Detours, the MinHook API wrapping around KNSoft.SlimDetours."
edition = "2024"

license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/metalbear-co/minhook-detours-sys"

keywords = ["minhook", "slimdetours", "hook", "detour", "crossplatform"]
categories = ["external-ffi-bindings"]

[build-dependencies]
cc = "1.0.54"

[dependencies]
bindgen = "0.72.0"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
